--- a/package.json
+++ b/package.json
@@ -11,19 +11,30 @@
     "@apollo/client": "^3.3.7",
     "@apollo/react-hooks": "^4.0.0",
     "cookie": "^0.4.1",
+    "date-fns": "^2.16.1",
     "deepmerge": "^4.2.2",
     "graphql": "^15.5.0",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
     "next": "10.0.5",
+    "open-color": "^1.8.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "^4.1.0",
+    "react-outside-click-handler": "^1.3.0",
+    "react-spring": "^8.0.27",
+    "react-toastify": "^7.0.2",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/cookie": "^0.4.0",
+    "@types/date-fns": "^2.6.0",
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "@types/react-outside-click-handler": "^1.3.0",
+    "@types/styled-components": "^5.1.7",
+    "babel-plugin-styled-components": "^1.12.0",
     "typescript": "^4.1.3"
   }
 }
