--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "dependencies": {
     "@apollo/client": "^3.3.7",
     "@apollo/react-hooks": "^4.0.0",
+    "codemirror": "^5.59.2",
     "cookie": "^0.4.1",
     "date-fns": "^2.16.1",
     "deepmerge": "^4.2.2",
     "graphql": "^15.5.0",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
+    "marked": "^1.2.8",
     "next": "10.0.5",
     "open-color": "^1.8.0",
+    "prismjs": "^1.23.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
@@ -27,10 +30,13 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@types/codemirror": "^0.0.107",
     "@types/cookie": "^0.4.0",
     "@types/date-fns": "^2.6.0",
     "@types/js-cookie": "^2.2.6",
+    "@types/marked": "^1.2.1",
     "@types/node": "^14.14.22",
+    "@types/prismjs": "^1.16.2",
     "@types/react": "^17.0.0",
     "@types/react-outside-click-handler": "^1.3.0",
     "@types/styled-components": "^5.1.7",
