--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-outside-click-handler": "^1.3.0",
     "react-spring": "^8.0.27",
     "react-toastify": "^7.0.2",
-    "styled-components": "^5.2.1"
+    "sanitize-html": "^2.3.2",
+    "styled-components": "^5.2.1",
+    "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
     "@types/codemirror": "^0.0.107",
@@ -41,6 +43,7 @@
     "@types/prismjs": "^1.16.2",
     "@types/react": "^17.0.0",
     "@types/react-outside-click-handler": "^1.3.0",
+    "@types/sanitize-html": "^1.27.1",
     "@types/styled-components": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
     "typescript": "^4.1.3"
